# scopusflow-py

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: docs.yml  publish.yml  tests.yaml
_snippets/: plot-setup.md
about/: index.html
changelog/: index.html
docs/: about.md  index.md  licence.md
docs/guides/: analysing-a-literature.md  building-a-reference-set.md  comparing-topics.md  designing-queries.md  getting-started.md  keywords-and-references.md  planning-a-harvest.md  plans-and-quota.md  the-app.md  tracking-literature-change.md
docs/reference/: analyse.md  dois.md  plan-and-query.md  records.md  retrieve.md
docs/stylesheets/: brand.css
examples/: quickstart.py
guides/analysing-a-literature/: index.html
guides/building-a-reference-set/: index.html
guides/comparing-topics/: index.html
guides/designing-queries/: index.html
guides/getting-started/: index.html
guides/keywords-and-references/: index.html
guides/planning-a-harvest/: index.html
guides/plans-and-quota/: index.html
guides/the-app/: index.html
guides/tracking-literature-change/: index.html
licence/: index.html
overrides/partials/: header.html
reference/analyse/: index.html
reference/dois/: index.html
reference/plan-and-query/: index.html
reference/records/: index.html
reference/retrieve/: index.html
search/: search_index.json
src/scopusflow/: __init__.py  abstract.py  app.py  app_helpers.py  compare.py  corpus.py  count.py  data.py  diff.py  exceptions.py  export.py  fetch.py  intersections.py  plan.py  plots.py  query.py  records.py  trend.py
src/scopusflow/_data/: example_records.csv
tests/: test_abstract.py  test_app.py  test_compare.py  test_core.py  test_corpus.py  test_data.py  test_export.py  test_fetch.py  test_intersections.py  test_plots.py  test_records.py  test_trend.py
