[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scopusflow"
dynamic = ["version"]
description = "A reproducible workflow layer over pybliometrics for Scopus searches"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Pablo Bernabeu", email = "pcbernabeu@gmail.com" }]
keywords = ["scopus", "bibliometrics", "pybliometrics", "literature", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pybliometrics>=4.0",
    "pandas>=1.5",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
app = ["nicegui>=2.0", "matplotlib>=3.5"]
dev = ["pytest>=7", "ruff>=0.4"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24", "markdown-exec>=1.8", "matplotlib>=3.5"]

[project.scripts]
scopusflow-gui = "scopusflow.app:launch"

[project.urls]
Homepage = "https://github.com/pablobernabeu/scopusflow-py"
Documentation = "https://pablobernabeu.github.io/scopusflow-py/"
"R twin" = "https://pablobernabeu.github.io/scopusflow/"

[tool.hatch.version]
path = "src/scopusflow/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/scopusflow"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

# State the rule set rather than inheriting whatever the installed ruff happens
# to default to. Ruff 0.16 widened its defaults, which turned a green CI red
# without a line of this package changing. The set below matches the theoryforge
# twin, so the family lints to one standard.
[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
